--- a/index.html
+++ b/index.html
@@ -1,122 +1,119 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Keval's Photography</title>
-  <link rel="icon" type="image/png" href="favicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Keval Photography</title>
+  <link rel="icon" href="favicon.png" type="image/png" />
   <style>
-    * {
+    body {
       margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }body {
-  font-family: 'Playfair Display', serif;
-  background: url('images/background.jpg') no-repeat center center/cover;
-  height: 100vh;
-  color: #fff;
-  position: relative;
-}
+      font-family: 'Segoe UI', sans-serif;
+      background: url('background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      position: relative;
+      color: white;
+    }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 1;
-}
+    .overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      z-index: 0;
+    }
 
-.container {
-  position: relative;
-  z-index: 2;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-}
+    .content {
+      position: relative;
+      z-index: 1;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 0 20px;
+    }
 
-h1 {
-  font-size: 4em;
-  margin-bottom: 0.3em;
-  text-shadow: 2px 2px 8px #000;
-}
+    h1 {
+      font-size: 4rem;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+    }
 
-p {
-  font-size: 1.5em;
-  margin-bottom: 1em;
-  text-shadow: 1px 1px 4px #000;
-}
+    p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin-bottom: 40px;
+      color: #ddd;
+    }
 
-.buttons {
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-}
+    .buttons {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
 
-.buttons a {
-  padding: 12px 24px;
-  background: rgba(255, 255, 255, 0.15);
-  border: 1px solid #fff;
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.1em;
-  border-radius: 8px;
-  backdrop-filter: blur(5px);
-  transition: background 0.3s ease;
-}
+    .btn {
+      background-color: #ff3d00;
+      color: white;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 25px;
+      text-decoration: none;
+      font-size: 1rem;
+      transition: background 0.3s;
+    }
 
-.buttons a:hover {
-  background: rgba(255, 255, 255, 0.35);
-}
+    .btn:hover {
+      background-color: #e53935;
+    }
 
-.instagram {
-  margin-top: 30px;
-}
+    .back-to-top {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      padding: 10px 15px;
+      border-radius: 50%;
+      font-size: 20px;
+      text-decoration: none;
+      z-index: 2;
+    }
 
-.instagram a {
-  text-decoration: none;
-  color: #fff;
-  background: #E1306C;
-  padding: 10px 20px;
-  border-radius: 50px;
-  font-weight: bold;
-  transition: background 0.3s ease;
-}
+    .back-to-top:hover {
+      background-color: #ff3d00;
+    }
 
-.instagram a:hover {
-  background: #C2185B;
-}
-
-@media (max-width: 600px) {
-  h1 {
-    font-size: 2.5em;
-  }
-
-  p {
-    font-size: 1.2em;
-  }
-
-  .buttons a {
-    font-size: 1em;
-  }
-}
-
+    @media (max-width: 500px) {
+      h1 {
+        font-size: 2.5rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+    }
   </style>
-</head><body>
+</head>
+<body>
   <div class="overlay"></div>
-  <div class="container">
-    <h1>Keval's Photography</h1>
-    <p>Capturing moments from nature’s heart</p>
+  <div class="content">
+    <h1>Keval Photography</h1>
+    <p>Capturing nature’s beauty through my lens. Welcome to my world of visual stories.</p>
     <div class="buttons">
-      <a href="gallery.html">Gallery</a>
-      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Instagram</a>
-    </div>
-    <div class="instagram">
-      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Follow on Instagram</a>
+      <a href="gallery.html" class="btn">Gallery</a>
+      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" class="btn">Follow on Instagram</a>
     </div>
   </div>
-</body></html>
+
+  <a href="#" class="back-to-top" onclick="scrollToTop()">&#8679;</a>
+
+  <script>
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
+</body>
+</html>
