--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,6 @@
       font-family: 'Segoe UI', sans-serif;
       background: url('images/background.jpg') no-repeat center center fixed;
       background-size: cover;
-      position: relative;
       color: white;
     }
 
@@ -23,20 +22,10 @@
       z-index: 0;
     }
 
-    .content {
+    .gallery-container {
       position: relative;
       z-index: 1;
       padding: 60px 20px;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 40px;
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
-    }
-
-    .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
@@ -46,17 +35,20 @@
 
     .gallery-item {
       position: relative;
-    }
-
-    .gallery img {
-      width: 100%;
+      overflow: hidden;
       border-radius: 12px;
       cursor: pointer;
-      transition: transform 0.3s ease;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.6);
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
     }
 
-    .gallery img:hover {
+    .gallery-item img {
+      width: 100%;
+      height: auto;
+      display: block;
+      transition: transform 0.3s ease;
+    }
+
+    .gallery-item:hover img {
       transform: scale(1.05);
     }
 
@@ -64,36 +56,37 @@
       position: absolute;
       bottom: 10px;
       right: 10px;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 6px 12px;
-      border-radius: 5px;
-      text-decoration: none;
-      color: white;
+      background-color: rgba(0,0,0,0.6);
+      color: #fff;
+      padding: 5px 10px;
       font-size: 0.9rem;
-    }
-
-    .download-btn:hover {
-      background: #ff3d00;
+      text-decoration: none;
+      border-radius: 5px;
     }
 
     .lightbox {
       display: none;
       position: fixed;
-      z-index: 9999;
+      z-index: 5;
       top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background: rgba(0, 0, 0, 0.9);
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.95);
       justify-content: center;
       align-items: center;
     }
 
     .lightbox img {
-      max-width: 90vw;
-      max-height: 90vh;
-      border-radius: 10px;
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 8px;
+    }
+
+    .lightbox:target {
+      display: flex;
     }
 
     .back-to-top {
+      display: none;
       position: fixed;
       bottom: 30px;
       right: 30px;
@@ -103,91 +96,190 @@
       border-radius: 50%;
       font-size: 20px;
       text-decoration: none;
+      z-index: 2;
+      cursor: pointer;
     }
 
     .back-to-top:hover {
       background-color: #ff3d00;
     }
-
-    .footer {
-      margin-top: 50px;
-      text-align: center;
-      font-size: 0.9rem;
-      color: #ccc;
-    }
-
-    .insta-btn {
-      display: inline-block;
-      margin-top: 15px;
-      background-color: #E1306C;
-      color: #fff;
-      padding: 10px 20px;
-      border-radius: 25px;
-      text-decoration: none;
-    }
-
-    .insta-btn:hover {
-      background-color: #c2185b;
-    }
   </style>
 </head>
 <body>
   <div class="overlay"></div>
-  <div class="content">
-    <h1>My Photography Gallery</h1>
-    <div class="gallery">
-      <!-- Gallery Items -->
-      <!-- Repeat for 17 images -->
-      <!-- Use lightbox(id) and download -->
-      <!-- Example: -->
-      <!-- Image 1 -->
-      <div class="gallery-item">
-        <img src="images/1.jpg" alt="Photo 1" onclick="openLightbox('images/1.jpg')">
-        <a class="download-btn" href="images/1.jpg" download>Download</a>
-      </div>
-      <!-- Images 2 to 17 -->
-      <!-- Repeat this block with appropriate image file names -->
-      <!-- Image Loop -->
-      <!-- Auto-generated -->
-      <script>
-        for (let i = 2; i <= 17; i++) {
-          document.write(`
-            <div class="gallery-item">
-              <img src="images/${i}.jpg" alt="Photo ${i}" onclick="openLightbox('images/${i}.jpg')">
-              <a class="download-btn" href="images/${i}.jpg" download>Download</a>
-            </div>
-          `);
-        }
-      </script>
+
+  <div class="gallery-container">
+    <!-- Repeat for all 17 images -->
+    <!-- Example block (copy and change src to 2.jpg, 3.jpg, ..., 17.jpg) -->
+    <!-- IMAGE 1 -->
+    <div class="gallery-item">
+      <a href="#img1"><img src="images/1.jpg" alt="Photo 1" /></a>
+      <a class="download-btn" href="images/1.jpg" download>Download</a>
     </div>
 
-    <div class="footer">
-      <p>© 2025 Keval Photography</p>
-      <a class="insta-btn" href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank">Follow on Instagram</a>
+    <!-- LIGHTBOX 1 -->
+    <div class="lightbox" id="img1">
+      <a href="#"><img src="images/1.jpg" alt="Full Photo 1" /></a>
     </div>
+
+    <!-- Repeat -->
+    <!-- IMAGE 2 -->
+    <div class="gallery-item">
+      <a href="#img2"><img src="images/2.jpg" alt="Photo 2" /></a>
+      <a class="download-btn" href="images/2.jpg" download>Download</a>
+    </div>
+    <div class="lightbox" id="img2">
+      <a href="#"><img src="images/2.jpg" alt="Full Photo 2" /></a>
+    </div>
+
+    <!-- IMAGE 3 -->
+<div class="gallery-item">
+  <a href="#img3"><img src="images/3.jpg" alt="Photo 3" /></a>
+  <a class="download-btn" href="images/3.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img3">
+  <a href="#"><img src="images/3.jpg" alt="Full Photo 3" /></a>
+</div>
+
+<!-- IMAGE 4 -->
+<div class="gallery-item">
+  <a href="#img4"><img src="images/4.jpg" alt="Photo 4" /></a>
+  <a class="download-btn" href="images/4.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img4">
+  <a href="#"><img src="images/4.jpg" alt="Full Photo 4" /></a>
+</div>
+
+<!-- IMAGE 5 -->
+<div class="gallery-item">
+  <a href="#img5"><img src="images/5.jpg" alt="Photo 5" /></a>
+  <a class="download-btn" href="images/5.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img5">
+  <a href="#"><img src="images/5.jpg" alt="Full Photo 5" /></a>
+</div>
+
+<!-- IMAGE 6 -->
+<div class="gallery-item">
+  <a href="#img6"><img src="images/6.jpg" alt="Photo 6" /></a>
+  <a class="download-btn" href="images/6.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img6">
+  <a href="#"><img src="images/6.jpg" alt="Full Photo 6" /></a>
+</div>
+
+<!-- IMAGE 7 -->
+<div class="gallery-item">
+  <a href="#img7"><img src="images/7.jpg" alt="Photo 7" /></a>
+  <a class="download-btn" href="images/7.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img7">
+  <a href="#"><img src="images/7.jpg" alt="Full Photo 7" /></a>
+</div>
+
+<!-- IMAGE 8 -->
+<div class="gallery-item">
+  <a href="#img8"><img src="images/8.jpg" alt="Photo 8" /></a>
+  <a class="download-btn" href="images/8.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img8">
+  <a href="#"><img src="images/8.jpg" alt="Full Photo 8" /></a>
+</div>
+
+<!-- IMAGE 9 -->
+<div class="gallery-item">
+  <a href="#img9"><img src="images/9.jpg" alt="Photo 9" /></a>
+  <a class="download-btn" href="images/9.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img9">
+  <a href="#"><img src="images/9.jpg" alt="Full Photo 9" /></a>
+</div>
+
+<!-- IMAGE 10 -->
+<div class="gallery-item">
+  <a href="#img10"><img src="images/10.jpg" alt="Photo 10" /></a>
+  <a class="download-btn" href="images/10.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img10">
+  <a href="#"><img src="images/10.jpg" alt="Full Photo 10" /></a>
+</div>
+
+<!-- IMAGE 11 -->
+<div class="gallery-item">
+  <a href="#img11"><img src="images/11.jpg" alt="Photo 11" /></a>
+  <a class="download-btn" href="images/11.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img11">
+  <a href="#"><img src="images/11.jpg" alt="Full Photo 11" /></a>
+</div>
+
+<!-- IMAGE 12 -->
+<div class="gallery-item">
+  <a href="#img12"><img src="images/12.jpg" alt="Photo 12" /></a>
+  <a class="download-btn" href="images/12.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img12">
+  <a href="#"><img src="images/12.jpg" alt="Full Photo 12" /></a>
+</div>
+
+<!-- IMAGE 13 -->
+<div class="gallery-item">
+  <a href="#img13"><img src="images/13.jpg" alt="Photo 13" /></a>
+  <a class="download-btn" href="images/13.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img13">
+  <a href="#"><img src="images/13.jpg" alt="Full Photo 13" /></a>
+</div>
+
+<!-- IMAGE 14 -->
+<div class="gallery-item">
+  <a href="#img14"><img src="images/14.jpg" alt="Photo 14" /></a>
+  <a class="download-btn" href="images/14.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img14">
+  <a href="#"><img src="images/14.jpg" alt="Full Photo 14" /></a>
+</div>
+
+<!-- IMAGE 15 -->
+<div class="gallery-item">
+  <a href="#img15"><img src="images/15.jpg" alt="Photo 15" /></a>
+  <a class="download-btn" href="images/15.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img15">
+  <a href="#"><img src="images/15.jpg" alt="Full Photo 15" /></a>
+</div>
+
+<!-- IMAGE 16 -->
+<div class="gallery-item">
+  <a href="#img16"><img src="images/16.jpg" alt="Photo 16" /></a>
+  <a class="download-btn" href="images/16.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img16">
+  <a href="#"><img src="images/16.jpg" alt="Full Photo 16" /></a>
+</div>
+
+<!-- IMAGE 17 -->
+<div class="gallery-item">
+  <a href="#img17"><img src="images/17.jpg" alt="Photo 17" /></a>
+  <a class="download-btn" href="images/17.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img17">
+  <a href="#"><img src="images/17.jpg" alt="Full Photo 17" /></a>
+</div>
   </div>
 
-  <div class="lightbox" id="lightbox" onclick="closeLightbox()">
-    <img id="lightbox-img" src="" alt="Lightbox Image">
-  </div>
-
-  <a href="#" class="back-to-top" onclick="scrollToTop()">&#8679;</a>
+  <a href="#" class="back-to-top" id="backToTop">&#8679;</a>
 
   <script>
-    function openLightbox(src) {
-      const lightbox = document.getElementById('lightbox');
-      const img = document.getElementById('lightbox-img');
-      img.src = src;
-      lightbox.style.display = 'flex';
-    }
-
-    function closeLightbox() {
-      document.getElementById('lightbox').style.display = 'none';
-    }
-
-    function scrollToTop() {
+    document.getElementById('backToTop').addEventListener('click', function (e) {
+      e.preventDefault();
       window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
+    });
+
+    window.addEventListener('scroll', function () {
+      const btn = document.getElementById('backToTop');
+      btn.style.display = window.scrollY > 200 ? 'block' : 'none';
+    });
   </script>
 </body>
 </html>
