--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Gallery - Keval Photography</title>
-  <link rel="icon" href="images/favicon.png" type="image/png" />
+  <title>Keval's Photography Gallery</title>
+  <link rel="icon" type="image/png" href="images/favicon.png" />
   <style>
     body {
       margin: 0;
@@ -15,19 +15,21 @@
     }
 
     .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
       background-color: rgba(0, 0, 0, 0.7);
-      z-index: 0;
+      min-height: 100vh;
+      padding: 60px 20px 40px;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 40px;
+      font-size: 3em;
+      text-shadow: 2px 2px 10px black;
     }
 
     .gallery-container {
-      position: relative;
-      z-index: 1;
-      padding: 60px 20px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
       max-width: 1200px;
       margin: auto;
@@ -36,9 +38,8 @@
     .gallery-item {
       position: relative;
       overflow: hidden;
-      border-radius: 12px;
-      cursor: pointer;
-      box-shadow: 0 0 10px rgba(0,0,0,0.6);
+      border-radius: 10px;
+      box-shadow: 0 0 10px #000;
     }
 
     .gallery-item img {
@@ -46,9 +47,10 @@
       height: auto;
       display: block;
       transition: transform 0.3s ease;
+      cursor: pointer;
     }
 
-    .gallery-item:hover img {
+    .gallery-item img:hover {
       transform: scale(1.05);
     }
 
@@ -56,98 +58,96 @@
       position: absolute;
       bottom: 10px;
       right: 10px;
-      background-color: rgba(0,0,0,0.6);
+      background: rgba(0, 0, 0, 0.6);
       color: #fff;
       padding: 5px 10px;
-      font-size: 0.9rem;
       text-decoration: none;
+      font-size: 0.8em;
       border-radius: 5px;
     }
 
     .lightbox {
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.9);
-  align-items: center;
-  justify-content: center;
-}
-
-.lightbox img {
-  max-width: 90%;
-  max-height: 90%;
-  box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
-  border-radius: 8px;
-  animation: zoomIn 0.3s ease-in-out;
-}
-
-@keyframes zoomIn {
-  from {
-    transform: scale(0.7);
-    opacity: 0;
-  }
-  to {
-    transform: scale(1);
-    opacity: 1;
-  }
-}
-
-.lightbox:target {
-  display: flex;
-}
-
-    .back-to-top {
       display: none;
       position: fixed;
-      bottom: 30px;
-      right: 30px;
-      background-color: rgba(0, 0, 0, 0.7);
-      color: #fff;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      align-items: center;
+      justify-content: center;
+    }
+
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+      border-radius: 8px;
+      animation: zoomIn 0.3s ease-in-out;
+    }
+
+    @keyframes zoomIn {
+      from {
+        transform: scale(0.7);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    .lightbox:target {
+      display: flex;
+    }
+
+    .back-to-top {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: rgba(0,0,0,0.6);
+      color: white;
       padding: 10px 15px;
       border-radius: 50%;
       font-size: 20px;
       text-decoration: none;
-      z-index: 2;
-      cursor: pointer;
+      transition: background 0.3s;
+      z-index: 999;
     }
 
     .back-to-top:hover {
-      background-color: #ff3d00;
+      background: rgba(255,255,255,0.2);
     }
   </style>
 </head>
 <body>
-  <div class="overlay"></div>
+  <div class="overlay">
+    <h1>My Photography Gallery</h1>
+    <div class="gallery-container">
 
-  <div class="gallery-container">
-    <!-- Repeat for all 17 images -->
-    <!-- Example block (copy and change src to 2.jpg, 3.jpg, ..., 17.jpg) -->
-    <!-- IMAGE 1 -->
-    <div class="gallery-item">
-      <a href="#img1"><img src="images/1.jpg" alt="Photo 1" /></a>
-      <a class="download-btn" href="images/1.jpg" download>Download</a>
-    </div>
+      <!-- START OF IMAGE BLOCK -->
+<!-- Each image includes lightbox and download button -->
 
-    <!-- LIGHTBOX 1 -->
-    <div class="lightbox" id="img1">
-      <a href="#"><img src="images/1.jpg" alt="Full Photo 1" /></a>
-    </div>
+<!-- Image 1 -->
+<div class="gallery-item">
+  <a href="#img1"><img src="images/1.jpg" alt="Photo 1" /></a>
+  <a class="download-btn" href="images/1.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img1">
+  <a href="#"><img src="images/1.jpg" alt="Full Photo 1" /></a>
+</div>
 
-    <!-- Repeat -->
-    <!-- IMAGE 2 -->
-    <div class="gallery-item">
-      <a href="#img2"><img src="images/2.jpg" alt="Photo 2" /></a>
-      <a class="download-btn" href="images/2.jpg" download>Download</a>
-    </div>
-    <div class="lightbox" id="img2">
-      <a href="#"><img src="images/2.jpg" alt="Full Photo 2" /></a>
-    </div>
+<!-- Image 2 -->
+<div class="gallery-item">
+  <a href="#img2"><img src="images/2.jpg" alt="Photo 2" /></a>
+  <a class="download-btn" href="images/2.jpg" download>Download</a>
+</div>
+<div class="lightbox" id="img2">
+  <a href="#"><img src="images/2.jpg" alt="Full Photo 2" /></a>
+</div>
 
-    <!-- IMAGE 3 -->
+<!-- Image 3 -->
 <div class="gallery-item">
   <a href="#img3"><img src="images/3.jpg" alt="Photo 3" /></a>
   <a class="download-btn" href="images/3.jpg" download>Download</a>
@@ -156,7 +156,7 @@
   <a href="#"><img src="images/3.jpg" alt="Full Photo 3" /></a>
 </div>
 
-<!-- IMAGE 4 -->
+<!-- Image 4 -->
 <div class="gallery-item">
   <a href="#img4"><img src="images/4.jpg" alt="Photo 4" /></a>
   <a class="download-btn" href="images/4.jpg" download>Download</a>
@@ -165,7 +165,7 @@
   <a href="#"><img src="images/4.jpg" alt="Full Photo 4" /></a>
 </div>
 
-<!-- IMAGE 5 -->
+<!-- Image 5 -->
 <div class="gallery-item">
   <a href="#img5"><img src="images/5.jpg" alt="Photo 5" /></a>
   <a class="download-btn" href="images/5.jpg" download>Download</a>
@@ -174,7 +174,7 @@
   <a href="#"><img src="images/5.jpg" alt="Full Photo 5" /></a>
 </div>
 
-<!-- IMAGE 6 -->
+<!-- Image 6 -->
 <div class="gallery-item">
   <a href="#img6"><img src="images/6.jpg" alt="Photo 6" /></a>
   <a class="download-btn" href="images/6.jpg" download>Download</a>
@@ -183,7 +183,7 @@
   <a href="#"><img src="images/6.jpg" alt="Full Photo 6" /></a>
 </div>
 
-<!-- IMAGE 7 -->
+<!-- Image 7 -->
 <div class="gallery-item">
   <a href="#img7"><img src="images/7.jpg" alt="Photo 7" /></a>
   <a class="download-btn" href="images/7.jpg" download>Download</a>
@@ -192,7 +192,7 @@
   <a href="#"><img src="images/7.jpg" alt="Full Photo 7" /></a>
 </div>
 
-<!-- IMAGE 8 -->
+<!-- Image 8 -->
 <div class="gallery-item">
   <a href="#img8"><img src="images/8.jpg" alt="Photo 8" /></a>
   <a class="download-btn" href="images/8.jpg" download>Download</a>
@@ -201,7 +201,7 @@
   <a href="#"><img src="images/8.jpg" alt="Full Photo 8" /></a>
 </div>
 
-<!-- IMAGE 9 -->
+<!-- Image 9 -->
 <div class="gallery-item">
   <a href="#img9"><img src="images/9.jpg" alt="Photo 9" /></a>
   <a class="download-btn" href="images/9.jpg" download>Download</a>
@@ -210,7 +210,7 @@
   <a href="#"><img src="images/9.jpg" alt="Full Photo 9" /></a>
 </div>
 
-<!-- IMAGE 10 -->
+<!-- Image 10 -->
 <div class="gallery-item">
   <a href="#img10"><img src="images/10.jpg" alt="Photo 10" /></a>
   <a class="download-btn" href="images/10.jpg" download>Download</a>
@@ -219,7 +219,7 @@
   <a href="#"><img src="images/10.jpg" alt="Full Photo 10" /></a>
 </div>
 
-<!-- IMAGE 11 -->
+<!-- Image 11 -->
 <div class="gallery-item">
   <a href="#img11"><img src="images/11.jpg" alt="Photo 11" /></a>
   <a class="download-btn" href="images/11.jpg" download>Download</a>
@@ -228,7 +228,7 @@
   <a href="#"><img src="images/11.jpg" alt="Full Photo 11" /></a>
 </div>
 
-<!-- IMAGE 12 -->
+<!-- Image 12 -->
 <div class="gallery-item">
   <a href="#img12"><img src="images/12.jpg" alt="Photo 12" /></a>
   <a class="download-btn" href="images/12.jpg" download>Download</a>
@@ -237,7 +237,7 @@
   <a href="#"><img src="images/12.jpg" alt="Full Photo 12" /></a>
 </div>
 
-<!-- IMAGE 13 -->
+<!-- Image 13 -->
 <div class="gallery-item">
   <a href="#img13"><img src="images/13.jpg" alt="Photo 13" /></a>
   <a class="download-btn" href="images/13.jpg" download>Download</a>
@@ -246,7 +246,7 @@
   <a href="#"><img src="images/13.jpg" alt="Full Photo 13" /></a>
 </div>
 
-<!-- IMAGE 14 -->
+<!-- Image 14 -->
 <div class="gallery-item">
   <a href="#img14"><img src="images/14.jpg" alt="Photo 14" /></a>
   <a class="download-btn" href="images/14.jpg" download>Download</a>
@@ -255,7 +255,7 @@
   <a href="#"><img src="images/14.jpg" alt="Full Photo 14" /></a>
 </div>
 
-<!-- IMAGE 15 -->
+<!-- Image 15 -->
 <div class="gallery-item">
   <a href="#img15"><img src="images/15.jpg" alt="Photo 15" /></a>
   <a class="download-btn" href="images/15.jpg" download>Download</a>
@@ -264,7 +264,7 @@
   <a href="#"><img src="images/15.jpg" alt="Full Photo 15" /></a>
 </div>
 
-<!-- IMAGE 16 -->
+<!-- Image 16 -->
 <div class="gallery-item">
   <a href="#img16"><img src="images/16.jpg" alt="Photo 16" /></a>
   <a class="download-btn" href="images/16.jpg" download>Download</a>
@@ -273,7 +273,7 @@
   <a href="#"><img src="images/16.jpg" alt="Full Photo 16" /></a>
 </div>
 
-<!-- IMAGE 17 -->
+<!-- Image 17 -->
 <div class="gallery-item">
   <a href="#img17"><img src="images/17.jpg" alt="Photo 17" /></a>
   <a class="download-btn" href="images/17.jpg" download>Download</a>
@@ -281,20 +281,11 @@
 <div class="lightbox" id="img17">
   <a href="#"><img src="images/17.jpg" alt="Full Photo 17" /></a>
 </div>
+
+<!-- END OF IMAGE BLOCK -->
+    </div>
   </div>
 
-  <a href="#" class="back-to-top" id="backToTop">&#8679;</a>
-
-  <script>
-    document.getElementById('backToTop').addEventListener('click', function (e) {
-      e.preventDefault();
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    });
-
-    window.addEventListener('scroll', function () {
-      const btn = document.getElementById('backToTop');
-      btn.style.display = window.scrollY > 200 ? 'block' : 'none';
-    });
-  </script>
+  <a href="#" class="back-to-top">&#8679;</a>
 </body>
 </html>
