--- a/index.html
+++ b/index.html
@@ -4,51 +4,56 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Keval Photography</title>
-  <link rel="icon" href="images/favicon.png" type="image/png" />
+  <link rel="icon" href="images/favicon.png" type="image/png"/>
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body, html {
+      height: 100%;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      scroll-behavior: smooth;
+    }
+
+    body {
       background: url('images/background.jpg') no-repeat center center fixed;
       background-size: cover;
-      position: relative;
-      color: white;
     }
 
     .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.7);
-      z-index: 0;
+      background: rgba(0, 0, 0, 0.6);
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
     }
 
     .content {
       position: relative;
-      z-index: 1;
-      height: 100vh;
+      z-index: 2;
+      height: 100%;
+      color: white;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
-      padding: 0 20px;
+      padding: 20px;
     }
 
-    h1 {
-      font-size: 4rem;
-      margin-bottom: 20px;
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
-    }
-
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin-bottom: 40px;
-      color: #ddd;
+    .content h1 {
+      font-size: 3.5rem;
+      margin-bottom: 1rem;
+      text-shadow: 2px 2px 10px black;
     }
 
     .buttons {
+      margin-top: 2rem;
       display: flex;
       gap: 20px;
       flex-wrap: wrap;
@@ -56,73 +61,69 @@
     }
 
     .btn {
-      background-color: #ff3d00;
-      color: white;
       padding: 12px 24px;
-      border: none;
-      border-radius: 25px;
-      text-decoration: none;
       font-size: 1rem;
-      transition: background 0.3s;
+      background-color: rgba(255, 255, 255, 0.1);
+      color: white;
+      border: 2px solid white;
+      border-radius: 30px;
+      text-decoration: none;
+      transition: all 0.3s ease;
     }
 
     .btn:hover {
-      background-color: #e53935;
+      background-color: white;
+      color: black;
     }
 
-    .back-to-top {
-      display: none;
+    #scrollToTop {
       position: fixed;
-      bottom: 30px;
-      right: 30px;
-      background-color: rgba(0, 0, 0, 0.7);
-      color: #fff;
+      bottom: 20px;
+      right: 20px;
+      z-index: 999;
+      background-color: rgba(255,255,255,0.1);
+      border: 2px solid white;
+      color: white;
       padding: 10px 15px;
       border-radius: 50%;
-      font-size: 20px;
-      text-decoration: none;
-      z-index: 2;
+      font-size: 18px;
       cursor: pointer;
-      transition: background 0.3s;
+      display: none;
+      transition: all 0.3s ease;
     }
 
-    .back-to-top:hover {
-      background-color: #ff3d00;
-    }
-
-    @media (max-width: 500px) {
-      h1 {
-        font-size: 2.5rem;
-      }
-      p {
-        font-size: 1rem;
-      }
+    #scrollToTop:hover {
+      background-color: white;
+      color: black;
     }
   </style>
 </head>
 <body>
   <div class="overlay"></div>
   <div class="content">
-    <h1>Keval Photography</h1>
-    <p>Capturing nature’s beauty through my lens. Welcome to my world of visual stories.</p>
+    <h1>Keval's Photography</h1>
     <div class="buttons">
-      <a href="gallery.html" class="btn">Gallery</a>
-      <a href="https://www.instagram.com/keval.kotadia?igsh=MW1lZmJveDZtdG1odg==" target="_blank" class="btn">Follow on Instagram</a>
+      <a href="gallery.html" class="btn">View Gallery</a>
+      <a href="https://www.instagram.com/keval.kotadia" class="btn" target="_blank">Follow on Instagram</a>
     </div>
   </div>
 
-  <a href="#" class="back-to-top" id="backToTop">&#8679;</a>
+  <button id="scrollToTop" onclick="scrollToTop()">↑</button>
 
   <script>
-    document.getElementById('backToTop').addEventListener('click', function (e) {
-      e.preventDefault();
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    });
+    const scrollBtn = document.getElementById("scrollToTop");
 
-    window.addEventListener('scroll', function () {
-      const btn = document.getElementById('backToTop');
-      btn.style.display = window.scrollY > 200 ? 'block' : 'none';
-    });
+    window.onscroll = function() {
+      if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+        scrollBtn.style.display = "block";
+      } else {
+        scrollBtn.style.display = "none";
+      }
+    };
+
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: "smooth" });
+    }
   </script>
 </body>
 </html>
